--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button class="btn" id="btn">x</button>
     </div>
     <div class="header"></div>
+    <h1>teste</h1>
     <script src="script.js"></script>
 </body>
 </html>
